--- a/index.html
+++ b/index.html
@@ -3,20 +3,7 @@
 <script type='text/javascript'>
 var canvas;
 var c;
-var p_hull1;
-var p_hull2;
-var p_hull3;
-var p_engine1;
-var p_engine2;
-var p_system1;
-var p_blaster1;
-var p_blaster1left;
-var p_blaster1right;
-var p_blast1;
-var p_explosion1;
-var p_explosion2;
-var p_shield1;
-var p_shield1broken;
+var p = new Array();
 var toload = 1;
 var totalload = 1;
 var zoom = 2;
@@ -43,70 +30,70 @@ function frag(pos, rot, col, typ, sub) {
             c.rotate(this.rot);
             switch(this.typ) {
             case 0: // Blast
-                c.translate(-p_blast1.width * 0.5, -p_blast1.height * 0.5);
-                c.drawImage(p_blast1, 0, 0);
+                c.translate(-p[9].width * 0.5, -p[9].height * 0.5);
+                c.drawImage(p[9], 0, 0);
                 break;
             case 1: // Explosion
                 c.scale(3.0 / 20.0 * this.lif + 0.1, 3.0 / 20.0 * this.lif + 0.1);
-                c.translate(-p_explosion1.width * 0.5, -p_explosion1.height * 0.5);
-                c.drawImage(p_explosion1, 0, 0);
+                c.translate(-p[10].width * 0.5, -p[10].height * 0.5);
+                c.drawImage(p[10], 0, 0);
                 break;
             case 2: // Engine fire
                 c.scale(2.0 / 10.0 * this.lif + 0.1, 2.0 / 10.0 * this.lif + 0.1);
-                c.translate(-p_explosion2.width * 0.5, -p_explosion2.height * 0.5);
-                c.drawImage(p_explosion2, 0, 0);
+                c.translate(-p[11].width * 0.5, -p[11].height * 0.5);
+                c.drawImage(p[11], 0, 0);
                 break;
             case 3: // Part
                 switch(this.sub) {
                 case "hull1":
                     c.rotate(this.pos.x * 0.01);
-                    c.translate(-p_hull1.width * 0.5, -p_hull1.height * 0.5);
-                    c.drawImage(p_hull1, 0, 0);
+                    c.translate(-p[0].width * 0.5, -p[0].height * 0.5);
+                    c.drawImage(p[0], 0, 0);
                     break;
                 case "hull2":
                     c.rotate(this.pos.x * 0.01);
-                    c.translate(-p_hull2.width * 0.5, -p_hull2.height * 0.5);
-                    c.drawImage(p_hull2, 0, 0);
+                    c.translate(-p[1].width * 0.5, -p[1].height * 0.5);
+                    c.drawImage(p[1], 0, 0);
                     break;
                 case "hull3":
                     c.rotate(this.pos.x * 0.01);
-                    c.translate(-p_hull3.width * 0.5, -p_hull3.height * 0.5);
-                    c.drawImage(p_hull3, 0, 0);
+                    c.translate(-p[2].width * 0.5, -p[2].height * 0.5);
+                    c.drawImage(p[2], 0, 0);
                     break;
                 case "engine1":
                     c.rotate(this.pos.x * 0.01);
-                    c.translate(-p_engine1.width * 0.5, -p_engine1.height * 0.5);
-                    c.drawImage(p_engine1, 0, 0);
+                    c.translate(-p[3].width * 0.5, -p[3].height * 0.5);
+                    c.drawImage(p[3], 0, 0);
                     break;
                 case "engine2":
                     c.rotate(this.pos.x * 0.01);
-                    c.translate(-p_engine2.width * 0.5, -p_engine2.height * 0.5);
-                    c.drawImage(p_engine2, 0, 0);
+                    c.translate(-p[4].width * 0.5, -p[4].height * 0.5);
+                    c.drawImage(p[4], 0, 0);
                     break;
                 case "system1":
                     c.rotate(this.pos.x * 0.01);
-                    c.translate(-p_system1.width * 0.5, -p_system1.height * 0.5);
-                    c.drawImage(p_system1, 0, 0);
+                    c.translate(-p[5].width * 0.5, -p[5].height * 0.5);
+                    c.drawImage(p[5], 0, 0);
                     break;
                 case "blaster1":
                     c.rotate(this.pos.x * 0.01);
-                    c.translate(-p_blaster1.width * 0.5, -p_blaster1.height * 0.5);
-                    c.drawImage(p_blaster1, 0, 0);
+                    c.translate(-p[8].width * 0.5, -p[8].height * 0.5);
+                    c.drawImage(p[8], 0, 0);
                     break;
                 case "blaster1left":
                     c.rotate(this.pos.x * 0.01);
-                    c.translate(-p_blaster1left.width * 0.5, -p_blaster1left.height * 0.5);
-                    c.drawImage(p_blaster1left, 0, 0);
+                    c.translate(-p[6].width * 0.5, -p[6].height * 0.5);
+                    c.drawImage(p[6], 0, 0);
                     break;
                 case "blaster1right":
                     c.rotate(this.pos.x * 0.01);
-                    c.translate(-p_blaster1right.width * 0.5, -p_blaster1right.height * 0.5);
-                    c.drawImage(p_blaster1right, 0, 0);
+                    c.translate(-p[7].width * 0.5, -p[7].height * 0.5);
+                    c.drawImage(p[7], 0, 0);
                     break;
                 case "shield1":
                     c.rotate(this.pos.x * 0.01);
-                    c.translate(-p_shield1broken.width * 0.5, -p_shield1broken.height * 0.5);
-                    c.drawImage(p_shield1broken, 0, 0);
+                    c.translate(-p[13].width * 0.5, -p[13].height * 0.5);
+                    c.drawImage(p[13], 0, 0);
                     break;
                 }
                 break;
@@ -163,16 +150,16 @@ function frag(pos, rot, col, typ, sub) {
                                 y: a[i].pos.y + a[i].nrm.y * a[i].p[u].x + a[i].nrm.x * a[i].p[u].y
                             };
                             switch(a[i].p[u].part) {
-                            case "hull1": psiz = (p_hull1.width + p_hull1.height) / 4.0; break;
-                            case "hull2": psiz = (p_hull2.width + p_hull2.height) / 4.0; break;
-                            case "hull3": psiz = (p_hull3.width + p_hull3.height) / 4.0; break;
-                            case "engine1": psiz = (p_engine1.width + p_engine1.height) / 4.0; break;
-                            case "engine2": psiz = (p_engine2.width + p_engine2.height) / 4.0; break;
-                            case "system1": psiz = (p_system1.width + p_system1.height) / 4.0; break;
-                            case "blaster1": psiz = (p_blaster1.width + p_blaster1.height) / 4.0; break;
-                            case "blaster1left": psiz = (p_blaster1left.width + p_blaster1left.height) / 4.0; break;
-                            case "blaster1right": psiz = (p_blaster1right.width + p_blaster1right.height) / 4.0; break;
-                            case "shield1": psiz = (p_shield1.width + p_shield1.height) / 4.0; break;
+                            case "hull1": psiz = (p[0].width + p[0].height) / 4.0; break;
+                            case "hull2": psiz = (p[1].width + p[1].height) / 4.0; break;
+                            case "hull3": psiz = (p[2].width + p[2].height) / 4.0; break;
+                            case "engine1": psiz = (p[3].width + p[3].height) / 4.0; break;
+                            case "engine2": psiz = (p[4].width + p[4].height) / 4.0; break;
+                            case "system1": psiz = (p[5].width + p[5].height) / 4.0; break;
+                            case "blaster1": psiz = (p[8].width + p[8].height) / 4.0; break;
+                            case "blaster1left": psiz = (p[6].width + p[6].height) / 4.0; break;
+                            case "blaster1right": psiz = (p[7].width + p[7].height) / 4.0; break;
+                            case "shield1": psiz = (p[12].width + p[12].height) / 4.0; break;
                             }
                             pos = {x: this.pos.x - ppos.x, y: this.pos.y - ppos.y};
                             dis = Math.sqrt(pos.x * pos.x + pos.y * pos.y) - psiz;
@@ -337,23 +324,23 @@ function ship(pos, rot, typ, col) {
             c.rotate(rot);
             switch(this.p[i].part) {
             case "hull1":
-                c.translate(-p_hull1.width * 0.5, -p_hull1.height * 0.5);
-                c.drawImage(p_hull1, 0, 0);
+                c.translate(-p[0].width * 0.5, -p[0].height * 0.5);
+                c.drawImage(p[0], 0, 0);
                 this.wgt += 0.8;
                 break;
             case "hull2":
-                c.translate(-p_hull2.width * 0.5, -p_hull2.height * 0.5);
-                c.drawImage(p_hull2, 0, 0);
+                c.translate(-p[1].width * 0.5, -p[1].height * 0.5);
+                c.drawImage(p[1], 0, 0);
                 this.wgt += 0.7;
                 break;
             case "hull3":
-                c.translate(-p_hull3.width * 0.5, -p_hull3.height * 0.5);
-                c.drawImage(p_hull3, 0, 0);
+                c.translate(-p[2].width * 0.5, -p[2].height * 0.5);
+                c.drawImage(p[2], 0, 0);
                 this.wgt += 0.7;
                 break;
             case "engine1":
-                c.translate(-p_engine1.width * 0.5, -p_engine1.height * 0.5);
-                c.drawImage(p_engine1, 0, 0);
+                c.translate(-p[3].width * 0.5, -p[3].height * 0.5);
+                c.drawImage(p[3], 0, 0);
                 this.wgt += 0.2;
                 this.acc += 1.0;
                 if(this.brn && Math.random() < 0.3) {
@@ -369,8 +356,8 @@ function ship(pos, rot, typ, col) {
                 }
                 break;
             case "engine2":
-                c.translate(-p_engine2.width * 0.5, -p_engine2.height * 0.5);
-                c.drawImage(p_engine2, 0, 0);
+                c.translate(-p[4].width * 0.5, -p[4].height * 0.5);
+                c.drawImage(p[4], 0, 0);
                 this.wgt += 0.3;
                 this.acc += 1.2;
                 if(this.brn && Math.random() < 0.3) {
@@ -386,32 +373,32 @@ function ship(pos, rot, typ, col) {
                 }
                 break;
             case "system1":
-                c.translate(-p_system1.width * 0.5, -p_system1.height * 0.5);
-                c.drawImage(p_system1, 0, 0);
+                c.translate(-p[5].width * 0.5, -p[5].height * 0.5);
+                c.drawImage(p[5], 0, 0);
                 this.wgt += 0.2;
                 this.sys++;
                 break;
             case "blaster1":
-                c.translate(-p_blaster1.width * 0.5, -p_blaster1.height * 0.5);
-                c.drawImage(p_blaster1, 0, 0);
+                c.translate(-p[8].width * 0.5, -p[8].height * 0.5);
+                c.drawImage(p[8], 0, 0);
                 this.wgt += 0.2;
                 this.gns++;
                 break;
             case "blaster1left":
-                c.translate(-p_blaster1left.width * 0.5, -p_blaster1left.height * 0.5);
-                c.drawImage(p_blaster1left, 0, 0);
+                c.translate(-p[6].width * 0.5, -p[6].height * 0.5);
+                c.drawImage(p[6], 0, 0);
                 this.wgt += 0.2;
                 this.gns++;
                 break;
             case "blaster1right":
-                c.translate(-p_blaster1right.width * 0.5, -p_blaster1right.height * 0.5);
-                c.drawImage(p_blaster1right, 0, 0);
+                c.translate(-p[7].width * 0.5, -p[7].height * 0.5);
+                c.drawImage(p[7], 0, 0);
                 this.wgt += 0.2;
                 this.gns++;
                 break;
             case "shield1":
-                c.translate(-p_shield1.width * 0.5, -p_shield1.height * 0.5);
-                c.drawImage(p_shield1, 0, 0);
+                c.translate(-p[12].width * 0.5, -p[12].height * 0.5);
+                c.drawImage(p[12], 0, 0);
                 this.wgt += 2.5;
                 break;
             }
@@ -620,74 +607,75 @@ function init() {
     // Load images
     toload++;
     totalload++;
-    p_hull1 = new Image();
-    p_hull1.onload = doneload();
-    p_hull1.src = "hull1.png";
+    p[0] = new Image();
+    p[0] = new Image();
+    p[0].onload = doneload();
+    p[0].src = "hull1.png";
     toload++;
     totalload++;
-    p_hull2 = new Image();
-    p_hull2.onload = doneload();
-    p_hull2.src = "hull2.png";
+    p[1] = new Image();
+    p[1].onload = doneload();
+    p[1].src = "hull2.png";
     toload++;
     totalload++;
-    p_hull3 = new Image();
-    p_hull3.onload = doneload();
-    p_hull3.src = "hull3.png";
+    p[2] = new Image();
+    p[2].onload = doneload();
+    p[2].src = "hull3.png";
     toload++;
     totalload++;
-    p_engine1 = new Image();
-    p_engine1.onload = doneload();
-    p_engine1.src = "engine1.png";
+    p[3] = new Image();
+    p[3].onload = doneload();
+    p[3].src = "engine1.png";
     toload++;
     totalload++;
-    p_engine2 = new Image();
-    p_engine2.onload = doneload();
-    p_engine2.src = "engine2.png";
+    p[4] = new Image();
+    p[4].onload = doneload();
+    p[4].src = "engine2.png";
     toload++;
     totalload++;
-    p_system1 = new Image();
-    p_system1.onload = doneload();
-    p_system1.src = "system1.png";
+    p[5] = new Image();
+    p[5].onload = doneload();
+    p[5].src = "system1.png";
     toload++;
     totalload++;
-    p_blaster1left = new Image();
-    p_blaster1left.onload = doneload();
-    p_blaster1left.src = "blaster1left.png";
+    p[6] = new Image();
+    p[6].onload = doneload();
+    p[6].src = "blaster1left.png";
     toload++;
     totalload++;
-    p_blaster1 = new Image();
-    p_blaster1.onload = doneload();
-    p_blaster1.src = "blaster1.png";
+    p[7] = new Image();
+    p[7].onload = doneload();
+    p[7].src = "blaster1right.png";
     toload++;
     totalload++;
-    p_blaster1right = new Image();
-    p_blaster1right.onload = doneload();
-    p_blaster1right.src = "blaster1right.png";
+    p[8] = new Image();
+    p[8].onload = doneload();
+    p[8].src = "blaster1.png";
     toload++;
     totalload++;
-    p_blast1 = new Image();
-    p_blast1.onload = doneload();
-    p_blast1.src = "blast1.png";
+    p[9] = new Image();
+    p[9].onload = doneload();
+    p[9].src = "blast1.png";
     toload++;
     totalload++;
-    p_explosion1 = new Image();
-    p_explosion1.onload = doneload();
-    p_explosion1.src = "explosion1.png";
+    p[10] = new Image();
+    p[10].onload = doneload();
+    p[10].src = "explosion1.png";
     toload++;
     totalload++;
-    p_explosion2 = new Image();
-    p_explosion2.onload = doneload();
-    p_explosion2.src = "explosion2.png";
+    p[11] = new Image();
+    p[11].onload = doneload();
+    p[11].src = "explosion2.png";
     toload++;
     totalload++;
-    p_shield1 = new Image();
-    p_shield1.onload = doneload();
-    p_shield1.src = "shield1.png";
+    p[12] = new Image();
+    p[12].onload = doneload();
+    p[12].src = "shield1.png";
     toload++;
     totalload++;
-    p_shield1broken = new Image();
-    p_shield1broken.onload = doneload();
-    p_shield1broken.src = "shield1broken.png";
+    p[13] = new Image();
+    p[13].onload = doneload();
+    p[13].src = "shield1broken.png";
     doneload();
 }
 
