--- a/index.html
+++ b/index.html
@@ -470,10 +470,23 @@ function ship(pos, rot, typ, col) {
             else this.respawn--;
             if(!this.respawn) {
                 this.col = Math.floor(Math.random() * 3);
-                this.pos = {x:Math.cos(this.col * Math.PI * 0.66 + i * 0.1) * 5000 + Math.random() * 500 - 250, y:Math.sin(this.col * Math.PI * 0.66 + i * 0.1) * 5000 + Math.random() * 500 - 250};
+                this.pos = {x:Math.cos(Math.random() * Math.PI * 2.0) * 7000, y:Math.sin(Math.random() * Math.PI * 2.0) * 7000};
                 this.rot = Math.random() * Math.PI * 2.0;
                 this.createShip(Math.floor(Math.random() * 3) + this.col * 3);
                 this.trg = Math.floor(Math.random() * a.length);
+                
+                // Give ship full speed towards center
+                this.spd = {
+                    x: -this.pos.x * 0.01,
+                    y: -this.pos.y * 0.01
+                }
+                
+                // Create a respawn "blast"
+                for(var u = 0; u < 10; u++) b.push(new frag(
+                    {x: this.pos.x, y: this.pos.y},
+                    Math.random() * Math.PI * 2.0,
+                    this.col, 2
+                ));
             }
         }
     }
