Added note and link to Star Citizen

--- a/index.html
+++ b/index.html
@@ -1113,6 +1113,7 @@ function stopkeyinput(e) {
 </script>
 </head>
 <body onload='init()' onmouseup='stopshooting(event)' style='margin: 0px;' onkeydown='startkeyinput(event)' onkeyup='stopkeyinput(event)'>
+<p><a href='http://robertsspaceindustries.com/'>Star Citizen Arena Commander</a> mod for Cartoon Space</p>
 <canvas id="canvas" width='1200' height='800' onmousedown='startshooting()' onmousemove='movetarget(event)'></canvas>
 <p id="asdf"></p><p id="debug">Accelerate: I, Turn left: J, Turn right: L, Fire: Q</p>
 </body>
